# ui-example-streamlit

./: .gitignore  Home.py  README.md  auth.py  header.py  inferences.py  justfile  layout.py  main.py  prompt_selector.py  prompt_version.py  prompts.py  pyproject.toml  styles.css  test.py
components/: evaluate_form.py  google_login.py  inference_details.py  layout.py  login.py  pagination.py  prompt_selector.py  sidebar.py
pages/: 1_Inferences.py  2_Prompts.py  3_Evaluate.py  4_My Feedbacks.py
utils/: prompton_helpers.py
