[tool.poetry]
name = "prompton-ui-streamlit"
version = "0.1.1"
description = "Example UI for prompton API using prompton Python SDK and Streamit"
authors = ["PromptOn <hello@prompton.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
streamlit = "^1.24.0"
prompton = "0.0.7"
streamlit-option-menu = "^0.3.6"
streamlit-extras = "^0.2.7"
streamlit-antd-components = "^0.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
types-pytz = "^2023.3.0.0"
watchdog = "^3.0.0"
types-tzlocal = "^5.0.1.0"
